# openai-language-teacher

./: .replit  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTICE  README.md  replit.nix
docs/: MANUAL.md
src/: main.rs  model_conversation.rs  model_exercises.rs  model_words.rs  openai_executor.rs
