[package]
name = "openai-language-teacher"
version = "0.1.0"
authors = ["mortylen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
# comment for windows, openssl is unnecessary for windows
openssl = { version = "0.10", features = ["vendored"] }